kubernetes/apps/home/zwave-js-ui/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.mcf.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zwave-js-ui
spec:
  parentRefs:
    - name: istio-ingressgateway
      namespace: istio-ingress
  hostnames:
    - zwave.milton.mcf.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zwave-js-ui
          port: 8091
